--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,11 @@ apply plugin: 'kotlin-android'
 //apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
+    //compileSdkVersion 33
+    //buildToolsVersion "30.0.3"
     defaultConfig {
+        compileSdk 33
+        buildToolsVersion = "30.0.3"
         applicationId "com.example.prakashmaharjan.recyclerviewdemokotlin"
         minSdkVersion 15
         targetSdkVersion 33
